# hyperclaw

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PYPI_PUBLISHING.md  README.md  SUPABASE-SETUP.md  agents_memory_update.py  com.hyperclaw.plist  docker-compose.yml  fly.toml  install.sh  pyproject.toml  register_testpypi.py  requirements.txt  run_hyperclaw.py  run_tui.sh  server.py  telegram_listener.py
agents/: __init__.py  background_monitor.py  learning.py  planner.py  transcriber.py
civilization/: __init__.py  schema.py  store.py
cli/: __init__.py  doctor.py  hyperclaw.py  onboarding.py
config/: agents.yaml  hyperclaw.yaml  models.yaml
core/: __init__.py
deploy/: HYBRID-DEPLOYMENT-SPEC.md  deploy-aws.sh  deploy-hetzner.sh  railway.json  render.yaml
docs/: HYPERCLAW-ONBOARDING-SPEC.md
hyperclaw/: __init__.py  __main__.py  agent.py  agent_coordinator.py  cli_tui.py  feeds.py  integrations_layer.py  memory_manager.py  model_router.py  orchestrator.py  prometheus.py  scheduler.py  server.py  setup.py  skills.py  solomon.py  swarm.py  telegram_bot.py  tts.py  tui.py
integrations/: __init__.py  base.py  gateway.py  telegram_inbound.py  telegram_poller.py
investor-data-room/: README.md  generate_docx.py
memory/: __init__.py  agent_memory.py  causal_graph.py  engram_lite.py  impact_tracker.py  vector_memory.py  vector_store.py
models/: __init__.py  chatjimmy_client.py  claude_client.py  claude_code_subagent.py  router.py
recursive/: discovery_loop.py  optimization_loop.py  validation_loop.py
ui/tui/: app.py
(+238 files in other folders)
